Update Spring Boot backend to 4.0.1